--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
+    "semantic-ui-react": "^0.88.2",
     "typescript": "^3.9.5"
   },
   "scripts": {
