--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "/panel/",
   "dependencies": {
     "@date-io/moment": "1.x",
+    "@devexpress/dx-react-core": "^2.6.4",
+    "@devexpress/dx-react-scheduler": "^2.6.4",
+    "@devexpress/dx-react-scheduler-material-ui": "^2.6.4",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
