--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.19.2",
     "date-fns": "^2.14.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -25,6 +26,7 @@
     "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -32,6 +34,7 @@
     "react-scripts": "3.4.1",
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.9.5"
   },
